rust/cambium-codegen/tests/compile-fail/user_ordered_vec_no_swap.stderr
error[E0599]: no method named `swap` found for struct `UserOrderedVec<T>` in the current scope
 --> tests/compile-fail/user_ordered_vec_no_swap.rs:7:19
  |
7 |     top.statement.swap(0, 1);
  |                   ^^^^ method not found in `UserOrderedVec<OrderingNestedUserCascadingTopStatementEntry>`
  |
 ::: tests/compile-fail/_generated_user_ordered_vec.rs
  |
  | pub struct UserOrderedVec<T> {
  | ---------------------------- method `swap` not found for this struct
  |
help: one of the expressions' fields has a method of the same name
  |
7 |     top.statement.items.swap(0, 1);
  |                   ++++++
